# Enmesh

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Enmesh_8h_source.html  README.md  afterdoc_8h_source.html  analyzer_8cpp.html  annotated.html  autolink_8cpp.html  basic__shapes_8h_source.html  boundary_8h_source.html  bug.html  classA-members.html  classA.html  classAfterdoc__Test-members.html  classAfterdoc__Test.html  classAutolink__Test-members.html  classAutolink__Test.html  classB-members.html  classB.html  classC-members.html  classC.html  classC1.html  classC2.html  classC3.html  classC4.html  classC5.html  classD-members.html  classD.html  classDelaunay-members.html  classDelaunay.html  classE-members.html  classE.html  classEnum__Test-members.html  classEnum__Test.html  classExample__Test-members.html  classExample__Test.html  classFn__Test-members.html  classFn__Test.html  (+201 more)
.github/workflows/: ci.yml  doxygen-gh-pages.yml
demos/: analyzer.cpp  demo_analyzer.cpp  demo_analyzer3D.cpp  demo_generateGrid.cpp  demo_smoothing.cpp  demo_triangulation.cpp  smoothing.cpp  triangulation.cpp  triangulation2.cpp
demos/models/: cube_hexa.msh  cube_tetra.msh  disk.msh  sphere.msh  square.msh
demos/scripts/: run_analyzer.bat  run_analyzer.sh  run_analyzer3D.bat  run_analyzer3D.sh  run_generateGrid.bat  run_generateGrid.sh  run_smoothing.bat  run_smoothing.sh  run_triangulation.bat  run_triangulation.sh
include/: analysis.h  exportToVTK.h  loadObj.h  mesh.h  point.h  triangulation.h
include/Enmesh/: Enmesh.h
include/geometry/: edge.h  mesh.h  point.h  tetrahedron.h  triangle.h
include/io/: loadMsh.h
include/mesh/: mesh.h  mesh_analysis.h  mesh_refine.h
include/mesh_generation/: basic_shapes.h  triangulation.h
models/: disk.msh  grid_quad.msh  grid_tri.msh  grid_unordered.msh  icoSphere1.mtl  sphere.msh
scripts/: run_analyzer.bat  run_analyzer3D.sh  run_generateGrid.bat  run_smoothing.sh  run_triangulation.bat  run_triangulation.sh  run_triangulation2.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_8.js  classes_a.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_9.js  functions_a.js  pages_0.js  (+30 more)
src/: analysis.cpp  exportToVTK.cpp  loadObj.cpp  main.cpp  mesh.cpp  mesh_exportToVTK.cpp  point.cpp
src/geometry/: hexa.cpp  mesh.cpp  point.cpp  quad.cpp  tetra.cpp  tetrahedron.cpp  triangle.cpp
src/io/: exportToVTK.cpp  exportToVTK.tpp  loadMsh.cpp  loadMsh.tpp  loadObj.cpp  loadObj.tpp
src/mesh/: mesh_analysis.cpp  mesh_analysis.tpp  mesh_basic_shapes.cpp  mesh_refine.cpp  mesh_smoothing.cpp  mesh_triangulation.cpp
src/mesh_generation/: basic_shapes.cpp  triangulation.cpp
src/visualization/: exportToVTK.cpp
tests/: test.bat  test.cpp  test.sh  test_mesh.cpp  test_quad.cpp  test_tetra.cpp  test_triangle.cpp
tests/test_geometry/: test_hexa.cpp  test_point.cpp  test_tetra.cpp  test_triangle.cpp
tests/test_io/: test_loadMsh.cpp
tests/test_mesh/: test_mesh.cpp  test_mesh_analysis.cpp  test_mesh_basic_shapes.cpp  (+1 more)
(+23 files in other folders)
